panel heading spacing corrected.

--- a/app/styles/_variants/_in04.scss
+++ b/app/styles/_variants/_in04.scss
@@ -35,6 +35,8 @@
 	.panel-heading{
 		padding-left: 0px;
 	  	margin-left:0px;
+	  	padding-top:15px;
+	  	padding-bottom:15px;
 	}
 
 	.panel-body{
